done changes in frontend and backend
