# backend/routes/contactusroutes.js
@@ -1,0 +1,6 @@
+const express = require('express');
+const router=express.Router();
+const {contactus}=require('../controllers/contactuscontroller');
+
+router.post('/contactus',contactus)
+module.exports = router;
